--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="styles.css">
 
+    <link rel="stylesheet" href="swipe.css">
     <link rel="stylesheet" href="imagezoomer.css">
     
     <title>Sandbox</title>
@@ -23,17 +24,26 @@
         </header>
         <ul class="side-nav__content">
           <li href="/">Home</li>
-          <li href="/about">About</li>
-          <li href="/contact">Contact</li>
+          <li href="/swipe">Swipe</li>
           <li href="/imagezoomer">ImageZoomer</li>
+          <li href="/about">About</li>
+
         </ul>
       </nav>
     </aside>
 
     <div class="views">
-      <sc-view class="view-home" route="^/$">Home</sc-view>
-      <sc-view class="view-about" route="^/about$">About</sc-view>
-      <sc-view class="view-contact" route="^/contact$">Contact</sc-view>
+      <sc-view class="view-home" route="^/$">Sandbox</sc-view>
+      <sc-view class="view-swipe" route="^/swipe$">
+        <div class="card-container">
+          <div class='card'>card 1</div>
+          <div class='card'>card 2</div>
+          <div class='card'>card 3</div>
+          <div class='card'>card 4</div>
+          <div class='card'>card 5</div>
+          <div class='card'>card 6</div>
+        </div>
+      </sc-view>
       <sc-view class="view-imagezoomer" route="^/imagezoomer$">
         <main class="main">
           <div class="image-surround">
@@ -41,6 +51,7 @@
           </div>
         </main>        
       </sc-view>
+      <sc-view class="view-about" route="^/about$">About</sc-view>
     </div>
 
     <div class="zoomer">
@@ -52,6 +63,7 @@
     <script defer src="side-nav.js"></script>
     <script defer src="sc-view.js"></script>
     <script defer src="sc-router.js"></script>
-    <script defer  src="image-zoomer.js"></script>
+    <script defer src="swipe.js"></script>
+    <script defer src="image-zoomer.js"></script>
   </body>
 </html>
